<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorDivider"
            android:padding="4dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/no_image"
            android:scaleType="centerCrop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListItemHeaderStyle"
                        android:text="@string/product_name" />

                    <TextView
                        android:id="@+id/item_name"
                        style="@style/ListItemSecondaryTextStyle"
                        tools:text="Some product name" />

                    <TextView
                        style="@style/ListItemHeaderStyle"
                        android:text="@string/unit_price" />

                    <TextView
                        android:id="@+id/item_price"
                        style="@style/ListItemSecondaryTextStyle"
                        tools:text="100$" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="155dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListItemHeaderStyle"
                        android:gravity="center_horizontal"
                        android:text="@string/available_quantity" />

                    <TextView
                        android:id="@+id/item_quantity"
                        style="@style/ListItemSecondaryTextStyle"
                        android:gravity="center_horizontal"
                        tools:text="10231" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/sale_button"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:layout_gravity="bottom"
                            android:background="@color/colorAccent"
                            android:focusable="false"
                            android:text="@string/sale_button"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
